<resources>
    <string name="app_name">网络问政管理</string>

    <!-- Strings related to login -->
    <string name="prompt_person">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_person">此用户名无效</string>
    <string name="error_invalid_password">这个密码太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_loginID">用户名不能为空</string>
    <string name="error_field_pwd">密码不能为空</string>


    <string name="sqc_platform_url">http://www.sqee.cn/forum-8-1.html</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>


    <string name="title_activity_main">问政列表</string>
    <string name="title_activity_new_politics">新建问政</string>
    <string name="title_activity_sqc_plat_form">宿迁论坛</string>
    <string name="title_activity_app_settings">设置</string>
    <string name="title_activity_static">统计问政</string>

    <string name="nav_swap_user">切换用户</string>
</resources>
